<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mohamed.monitor.MainActivity">

    <Button
        android:id="@+id/connectButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/connect"
        app:layout_constraintLeft_toRightOf="@+id/BluetoothView"
        app:layout_constraintRight_toRightOf="@+id/BluetoothView"
        app:layout_constraintTop_toBottomOf="@+id/BluetoothView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/disConnectButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:text="@string/disconnect"
        app:layout_constraintBaseline_toBaselineOf="@+id/connectButton"
        app:layout_constraintLeft_toRightOf="@+id/connectButton"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/monitorButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:text="Go To Monitor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/BluetoothView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:text="@string/bluetooth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/welcomeView"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />
</android.support.constraint.ConstraintLayout>
