<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RPY"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mohamed.monitor.RPY2">

    <TextView
        android:id="@+id/pitchLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/pitch"
        app:layout_constraintLeft_toLeftOf="@+id/yawLabel"
        app:layout_constraintRight_toRightOf="@+id/yawLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/rollG"
        android:layout_width="275dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="@+id/pitchLabel"
        app:layout_constraintLeft_toLeftOf="@+id/pitchGraph"
        app:layout_constraintRight_toRightOf="@+id/pitchGraph"
        app:layout_constraintTop_toBottomOf="@+id/pitchLabel"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/yawGraph"
        android:layout_width="275dp"
        android:layout_height="160dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/pitchGraph"
        app:layout_constraintRight_toRightOf="@+id/pitchGraph"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/pitchGraph"
        android:layout_width="275dp"
        android:layout_height="160dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/startStop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/rollLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/roll"
        app:layout_constraintLeft_toLeftOf="@+id/pitchLabel"
        app:layout_constraintRight_toRightOf="@+id/pitchLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/RollValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/pitchLabel"
        app:layout_constraintLeft_toRightOf="@+id/rollG"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/pitchValue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchLabel"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/yawLabel"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:text="@string/yaw"
        app:layout_constraintBottom_toTopOf="@+id/yawValue"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/yawValue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rollG"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollG"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ToggleButton
        android:id="@+id/startStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:checked="false"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


</android.support.constraint.ConstraintLayout>
